--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ul>
       <li><a href="/blog">Blog</a></li>
       <li><a href="orfstreams.html">ORF Live Streams List</a></li>
-      <li><a href="valveserverlist.html">Valve Server List</a></li>
+      <li><a href="valveserverlist.html">TF2 Valve Server List</a></li>
     </ul>
   </body>
 </html>
