--- a/orfstreams.html
+++ b/orfstreams.html
@@ -10,6 +10,10 @@
         margin: auto;
         margin-top: 50px;
       }
+
+      .monospace {
+        font-family: monospace;
+      }
     </style>
   </head>
   <body>
@@ -122,4 +126,10 @@
       
     </table>
   </body>
+
+  <div>
+    For VLC you need to set the user agent like this:
+  </div>
+
+  <span class="monospace">vlc "http://apasfiisl.apa.at/ipad/orf1_q8c/orf.sdp/playlist.m3u8" :http-user-agent=Mozilla/4.0</span>
 </html>
