Get rid of bootstrap dependency

--- a/orfstreams.html
+++ b/orfstreams.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>ORF Streams</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <style>
       body {
-        width: 30%;
+        max-width: 800px;
         margin: auto;
         margin-top: 50px;
+        font-family: sans-serif;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+      }
+
+      td {
+        border: 1px solid #dddddd;
+        padding: 10px;
+      }
+
+      a, a:visited {
+        color: #337ab7;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: #23527c;
+        text-decoration: underline;
       }
 
       .monospace {
